// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button UI component tests calls onClick handler when is clicked on 1`] = `
<button
  class="text text_type_button text_color_primary button   "
  type="button"
>
  <p
    class="text undefined"
  >
    Click me
  </p>
</button>
`;

exports[`Button UI component tests disables when disabled prop is set to true 1`] = `
<button
  class="text text_type_button text_color_primary button   "
  disabled=""
  type="button"
>
  <p
    class="text undefined"
  >
    Click me
  </p>
</button>
`;

exports[`Button UI component tests disables when isLoader prop is set to true 1`] = `
<button
  class="text text_type_button text_color_primary button  loader "
  disabled=""
  type="button"
>
  <img
    alt="Загрузка."
    class="loader_icon"
    src="loader.svg"
  />
</button>
`;

exports[`Button UI component tests renders correctly with text provided 1`] = `
<button
  class="text text_type_button text_color_primary button   "
  type="button"
>
  <p
    class="text undefined"
  >
    Click me
  </p>
</button>
`;

exports[`Button UI component tests renders correctly without text provided 1`] = `
<button
  class="text text_type_button text_color_primary button   "
  type="button"
>
  <p
    class="text undefined"
  />
</button>
`;
